fix: remove wrong margin for smaller screens

--- a/src/page-modules/departures/details/details.module.css
+++ b/src/page-modules/departures/details/details.module.css
@@ -34,11 +34,6 @@
 .serviceJourneyContainer {
   grid-area: serviceJourney;
 }
-@media (max-width: 650px) {
-  .serviceJourneyContainer {
-    margin: 0 auto;
-  }
-}
 
 .header {
   display: flex;
